tests/e2e/pass/m6_loop.ep
# EXIT: 0
# STDOUT: 0
# STDOUT: 1
# STDOUT: 2
# STDOUT: 3
# STDOUT: 4
fun main(): void {
    let i = 0
    for i < 5 {
        println(str(i))
        i = i + 1
    }
    exit(0)
}
